<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash_gradient_dark"
    android:paddingStart="@dimen/space_24"
    android:paddingTop="@dimen/space_24"
    android:paddingEnd="@dimen/space_24"
    android:paddingBottom="@dimen/space_24">

    <View
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_marginTop="-90dp"
        android:background="@drawable/bg_splash_glow_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_marginBottom="-90dp"
        android:background="@drawable/bg_splash_glow_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48">

        <FrameLayout
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:background="@drawable/bg_login_logo_gradient">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_videocam_48"
                android:tint="@color/white" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_24"
            android:text="@string/login_brand"
            android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8"
            android:gravity="center"
            android:text="@string/splash_subtitle"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:textColor="@color/auth_on_surface_variant" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/splash_btn_start"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/space_32"
            android:backgroundTint="@color/auth_primary"
            android:text="@string/splash_btn_start"
            android:textColor="@color/auth_on_primary"
            android:textAllCaps="false"
            app:icon="@drawable/ic_rl_rocket_24"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/auth_on_primary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/splash_btn_login"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/space_12"
            android:strokeColor="@color/auth_outline_light"
            android:textColor="@color/white"
            android:text="@string/splash_btn_login"
            android:textAllCaps="false" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
